using UnityEngine;
using System;
using System.Collections;

internal class AnimationStrings
{
  internal static string isMoving = "isMoving";
  internal static string isRunning = "isRunning";
  internal static string isGrounded = "isGrounded";
  internal static string yVelocity = "yVelocity";
  internal static string jumpTrigger = "jump";
  internal static string isOnWall = "isOnWall";
  internal static string isOnCeiling = "isOnCeiling";
  internal static string attackTrigger = "attack";
  internal static string canMove = "canMove";
  internal static string hasTarget = "hasTarget";
  internal static string isAlive = "isAlive";
  internal static string isHit = "isHit";
  internal static string attackCooldown = "attackCooldown";
  internal static string rangedAttackTrigger = "rangedAttack";
}
